Fix for overlapping remove pin icon on long nav items

--- a/frontend/public/components/nav/_perspective-nav.scss
+++ b/frontend/public/components/nav/_perspective-nav.scss
@@ -27,6 +27,7 @@
     white-space: nowrap;
 
     &:hover, &:focus {
+      padding-right: 30px;
       .oc-nav-pinned-item__unpin-button {
         .oc-nav-pinned-item__icon {
           opacity: 1;
